# l10n-pl-ksef-margin

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
l10n_pl_ksef_margin/: __init__.py  __manifest__.py
l10n_pl_ksef_margin/data/: ksef_cron.xml
l10n_pl_ksef_margin/docs/: PLAN.md  TZ.md
l10n_pl_ksef_margin/i18n/: pl_PL.po  uk_UA.po
l10n_pl_ksef_margin/models/: __init__.py  account_move.py  ksef_bulk_send_wizard.py  ksef_vendor_buffer.py  res_company.py
l10n_pl_ksef_margin/security/: ir.model.access.csv  ksef_security.xml
l10n_pl_ksef_margin/services/: __init__.py  ksef_auth.py  ksef_xml_builder.py  ksef_xml_parser.py
l10n_pl_ksef_margin/static/description/: index.html
l10n_pl_ksef_margin/static/src/components/ksef_dashboard/: ksef_dashboard.js  ksef_dashboard.xml
l10n_pl_ksef_margin/static/src/components/ksef_dashboard_card/: ksef_dashboard_card.js  ksef_dashboard_card.xml  ksef_dashboard_patch.js
l10n_pl_ksef_margin/static/src/scss/: ksef_dashboard.scss
l10n_pl_ksef_margin/tests/: __init__.py  conftest.py  test_environment.py  test_xml_builder.py  test_xml_parser.py
l10n_pl_ksef_margin/views/: account_move_views.xml  ksef_bulk_send_wizard_views.xml  ksef_dashboard_views.xml  ksef_vendor_buffer_views.xml  res_company_views.xml
scripts/: check_no_ai_signature.py
